fixed scrollbar style issues. Rescaled text. Updated TopNavBar

--- a/client/src/components/BoardCard/_card.scss
+++ b/client/src/components/BoardCard/_card.scss
@@ -3,6 +3,7 @@
     padding: 10px;
     font-family: "Arial";
     box-shadow: 0px 0px 10px #444;
+    user-select: none;
     
     &__header {
       display: grid;
@@ -10,15 +11,15 @@
     }
     &__title {
       font-weight: bold;
-      font-size: 1.0em;
+      font-size: 0.9em;
     }
     &__category {
       font-style: italic;
-      font-size: 0.8em;
-      padding-bottom: 0.7em;
+      font-size: 0.7em;
+      padding-bottom: 0.6em;
     }
     &__description { 
-      font-size: .9em;
+      font-size: 0.8em;
     }
     &__assignment {
       padding: 10px;
