--- a/client/src/components/BoardColumn/_column.scss
+++ b/client/src/components/BoardColumn/_column.scss
@@ -31,9 +31,9 @@
     grid-row-gap: 0.5em;
     grid-auto-rows: max-content;
     overflow-y: scroll;
-    height: calc(100vh - (7.7em + 1em));
+    height: calc(100vh - (7.8em + 1em));
     background-color: lightgray;
-    padding: 10px;
+    padding: 0.6em 0.3em 0.6em 0.6em;
   }
   &__content::-webkit-scrollbar {
     width: 0.4em;
