--- a/client/src/layout/TopBarNavigation/_topbarnav.scss
+++ b/client/src/layout/TopBarNavigation/_topbarnav.scss
@@ -2,7 +2,7 @@
     width: 100%;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: blue;
+    background-color: rgba(55,55,55,1);
     display: grid;
     grid-template-columns: auto max-content max-content;
     grid-column: span 4;
